include fetch user data page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   position: relative;
 }
 
@@ -54,7 +54,8 @@ form {
   box-shadow: 0 0 10px rgba(52, 152, 219, 0.5);
 }
 
-.form_container input[type="submit"] {
+.form_container input[type="submit"],
+.form_container a {
   width: 100%;
   padding: 10px;
   background-color: #3498db;
